(executables
 (names client server)
 (package grpc-examples)
 (public_names greeter_client_async greeter_server_async)
 (libraries
  grpc
  grpc-async
  ocaml-protoc-plugin
  async
  async_kernel
  async_unix
  core_kernel
  core
  core_unix.command_unix
  greeter
  h2
  h2-async)
 (preprocess
  (pps ppx_jane)))
