(library
 (name routeguide_proto_async)
 (package grpc-examples)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_jane))
 (libraries ocaml-protoc-plugin core))

(rule
 (targets route_guide.ml)
 (deps
  (:proto route_guide.proto))
 (action
  (run
   protoc
   -I
   .
   "--ocaml_out=open=Core;annot=[@@deriving show { with_path = false }, eq, sexp, compare]:."
   %{proto})))
