(library
 (name routeguide)
 (package grpc-examples)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq))
 (libraries ocaml-protoc-plugin))

(rule
 (targets route_guide.ml)
 (deps
  (:proto route_guide.proto))
 (action
  (run
   protoc
   -I
   .
   "--ocaml_out=annot=[@@deriving show { with_path = false }, eq]:."
   %{proto})))
