(library
 (name routeguide)
 (package grpc-examples)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq))
 (libraries pbrt))

(rule
 (targets route_guide.ml)
 (deps
  (:proto route_guide.proto))
 (action
  (run
   ocaml-protoc --ocaml_all_types_ppx "deriving show" --int32_type int_t --int64_type int_t --binary --ml_out ./ %{proto})))
