(executables
 (names server client)
 (package grpc-examples)
 (public_names routeguide-server routeguide-client)
 (libraries
  grpc-server-eio
  grpc-client-eio
  eio_main
  ocaml-protoc-plugin
  routeguide
  yojson
  ppx_deriving_yojson.runtime
  grpc-eio-net-server-h2
  grpc-eio-net-client-h2)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.eq)))
