(executables
 (names server client)
 (package grpc-examples)
 (public_names routeguide-server routeguide-client)
 (libraries
  grpc-server-eio
  grpc-client-eio
  eio_main
  ocaml-protoc-plugin
  routeguide
  yojson
  ppx_deriving_yojson.runtime
  io_server_h2_ocaml_protoc
  io_client_h2_ocaml_protoc)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.eq)))
